[package]
name = "rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.16", features = [ "derive" ] }
duct = "0.13.5"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "*"
walkdir = "2.3.2"
